auditron-backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auditron-api
  namespace: auditron
  labels:
    app: auditron-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: auditron-api

---
apiVersion: v1
kind: Service
metadata:
  name: auditron-api-headless
  namespace: auditron
  labels:
    app: auditron-api
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: auditron-api
